# poc-11

./: AGENTS.md  Cargo.toml  README.md  feedback.md
.cargo/: config.toml
docs/: proof-plan.md  proof-projector-style.md
docs/research/: in-memory-projection-bounded-replay.md
scripts/: collect_proof_strategies.py  run_verus.sh
src/: cli.rs  cli_unproven.rs  lib.rs  proof.rs
src/core/: admit.rs  admit_unproven.rs  effects_unproven.rs  engine.rs  engine_unproven.rs  gate.rs  index.rs  index_unproven.rs  item.rs  item_unproven.rs  mod.rs  net.rs  offer.rs  offer_unproven.rs  play.rs  play_unproven.rs  projector.rs  projector_unproven.rs  runtime_unproven.rs  turn_unproven.rs  typestate_unproven.rs
src/facts/: mod.rs
src/facts/link/: api_unproven.rs  author_unproven.rs  cli_unproven.rs  mod.rs  project.rs  project_unproven.rs
src/helpers/: clock_unproven.rs  crypto_unproven.rs  hex_unproven.rs  mod.rs  sqlite_unproven.rs
src/protocol/: link.rs  mod.rs
tests/: bounded_replay.rs  core_gate.rs  documentation.rs  engine_queues.rs  link_project_kernel.rs  link_reports.rs  network_roundtrip.rs  reverse_key.rs  verus_core.rs
tests/cli_harness/: mod.rs
verus-core/: Cargo.toml
verus-core/src/: lib.rs
