[package]
name = "linktoy"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "linktoy"
path = "src/lib.rs"

[[bin]]
name = "lk"
path = "src/bin/lk.rs"

[features]
# Declared for future cargo-verus integration. Proofs are verified standalone via
# scripts/run_verus.sh, so cargo never compiles `verus!` syntax and the toy stays
# dependency-light.
verus = []

[dependencies]
blake3 = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
