[package]
name = "linktoy"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "linktoy"
path = "src/lib.rs"

[[bin]]
name = "lk"
path = "src/bin/lk.rs"

[features]
# Declared for future cargo-verus integration. The executable proof-facing core
# lives in `verus-core/` and is verified by scripts/run_verus.sh.
verus = []

[dependencies]
blake3 = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
linktoy-verus-core = { path = "verus-core" }

[dev-dependencies]
tempfile = "3"
