[package]
name = "linktoy"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "linktoy"
path = "src/lib.rs"

[[bin]]
name = "lk"
path = "src/bin/lk.rs"

[features]
# Declared for cargo-verus integration of proof-facing modules.
verus = []

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(verus_keep_ghost)',
    'cfg(verus_keep_ghost_body)',
] }

[dependencies]
blake3 = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
vstd = "=0.0.0-2026-03-22-0106"

[dev-dependencies]
tempfile = "3"
